<resources>
    <string name="Aa">Aa</string>
    <string name="N_A">N/A</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_bind_google">Google</string>
    <string name="account_bind_mail">E-mail</string>
    <string name="account_bind_phone">Phone Nº</string>
    <string name="account_bind_privacy_prefix">By continuing you agree with our</string>
    <string name="account_bind_timeout">The connection has timed out.</string>
    <string name="account_not_suport_email">This email does not support sending verification codes, so please use a different email.</string>
    <string name="account_number">Account</string>
    <string name="actor">Cast:</string>
    <string name="ad">ad</string>
    <string name="ad_backup">jktgk.bxtzwlyan.com</string>
    <string name="ad_main">skc2r.plracsimf.com</string>
    <string name="add_fav_success">Successfully added to the Favorites</string>
    <string name="ads">Ads</string>
    <string name="ads_bind_account">In order to become a member, you need to bind your account</string>
    <string name="ads_skip">Skip</string>
    <string name="adult_content_unblocked">Adult Content Unblocked</string>
    <string name="adult_open_tips">This content is inapropriate for minors. Go to \"Live-&gt;Adult Category\" to watch the adult channel or click the button below to watch adult videos.</string>
    <string name="adult_unlocked">Adult Content Unblocked. Please note that these programs are inappropriate for children under 18!</string>
    <string name="advance_enjoy_vip_basic_content">　 Due to the bank\'s review and processing, there will be a delay in the activation of your plan. You can enjoy %1$d days of Basic membership in advance.</string>
    <string name="advance_enjoy_vip_help">please check the help&gt;</string>
    <string name="advance_enjoy_vip_next_time">Next time</string>
    <string name="advance_enjoy_vip_obtained_content">　 You have obtained %1$d-day of Basic membership. Restart the application after 5 minutes to enjoy the membership service.</string>
    <string name="advance_enjoy_vip_standard_content">　 The Standard plan can only be enjoyed after the corresponding order takes effect. To learn more about the early access to the membership, </string>
    <string name="advance_enjoy_vip_use">Use</string>
    <string name="all_orders">Order history</string>
    <string name="all_select">Select all</string>
    <string name="am_dialog_bind_before_unbind">You need to bind your e-mail before you can unbind you Google account.</string>
    <string name="am_dialog_confirm_unbind">Confirm unbind</string>
    <string name="am_dialog_goto_bind">To bind</string>
    <string name="am_dialog_not_login_after_unbind">After unbinding, you won\'t be able to login using your Google account (%1$s)</string>
    <string name="am_google_been_bound">Binding failed! This Google account already have been bound to another account!</string>
    <string name="am_login_other_account">Log in other accounts</string>
    <string name="am_to_bind">Bind</string>
    <string name="am_to_unbind">Unbinding</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="antologia">Select an episode</string>
    <string name="apk_downloading">Downloading</string>
    <string name="app_name">Xuper</string>
    <string name="app_restart">Sorry! app exception, about to restart</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_adult">Are you over 18?</string>
    <string name="attention">Attention</string>
    <string name="audio_ara">Arabic</string>
    <string name="audio_dut">Dutch</string>
    <string name="audio_ger">German</string>
    <string name="audio_heb">Hebrew</string>
    <string name="audio_ita">Italian</string>
    <string name="audio_jpn">Japanese</string>
    <string name="audio_language">Audio language</string>
    <string name="audio_zh">Chinese</string>
    <string name="back_btn">Back</string>
    <string name="bad_network">Network isn’t good, please check it and retry.</string>
    <string name="be_a_vip">Be a VIP member</string>
    <string name="be_bind_suc_and_keep_pwd">Bind successfully! You can use this email %1$s to log in.Please keep your password properly, thank you!</string>
    <string name="be_bind_suc_and_login">Bind successfully! You can use this email to log in.</string>
    <string name="be_bind_suc_title">Binding successfully</string>
    <string name="be_goto_email_and_view">Please go to %1$s to get the verification code. If you don\'t receive the verification code within 3 minutes, you can check the spam. If you cant find it, please try to get another verification code.</string>
    <string name="be_next">Next</string>
    <string name="be_please_input_email">Please enter your e-mail</string>
    <string name="be_please_input_new_email">New e-mail</string>
    <string name="be_please_input_verify_code">Input verification code</string>
    <string name="be_send_sms">Send</string>
    <string name="be_vip_member">Be a VIP member</string>
    <string name="benefits_valid_until">Valid until: %1$s(dd-mm-yyyy)</string>
    <string name="beta">Trial Version</string>
    <string name="bigbee_backup">skvbv.hbcpdutka.com</string>
    <string name="bigbee_main">c2tgd3.ewzpuscyv.com</string>
    <string name="bind_account_experience_vip_tip">Bind your account to watch VIP content</string>
    <string name="bind_account_use_coupons">In order to use the coupon, you must bind your account</string>
    <string name="bind_email_send">The activation link will be sent to your email within 5 minutes.Please go to your inbox to reactivate your email, log in when finished. If you didn’t find it, please check your spam mail first!</string>
    <string name="bind_first_notice">No account, please bind first</string>
    <string name="binding_prompt">Binding prompt</string>
    <string name="black_list_hint">Due to copyright restrictions, you cannot login in this location!</string>
    <string name="black_list_id">(ID:%1$s)</string>
    <string name="black_list_login_other">Log in with other account</string>
    <string name="confirm">Confirm</string>
    <string name="current_device_account">Current device account:</string>
    <string name="current_device_id">Current Device Account&lt;font color=#ffbf00&gt; %1$s &lt;/font&gt;</string>
    <string name="do_not_receive">If you didn\'t receive the e-mail, please click in send again.</string>
    <string name="email_send_again">The email has been sent again, please check it!</string>
    <string name="email_send_success">The activation link will be sent to your email within 5 minutes.Please check your inbox to validate your account, log in when finished.If you don’t find it, please check your spam box!</string>
    <string name="enter_account_hint">Enter your account</string>
    <string name="enter_password_hint">Input your password</string>
    <string name="frequent_operation">Frequent operation, please try again later!</string>
    <string name="login">Login</string>
    <string name="login_encounter_problem">Encounter problems?</string>
    <string name="login_forget_password">Forgot password</string>
    <string name="login_method_account">Account</string>
    <string name="login_method_email">E-mail</string>
    <string name="login_method_google">Google</string>
    <string name="login_method_mobile">Phone</string>
    <string name="login_method_scan_code">QR Code</string>
    <string name="login_method_visitor">Guest</string>
    <string name="no">No</string>
    <string name="password_format_tips">Tip: The password format is a combination of 6-12 digits + letters, such as: 12345a</string>
    <string name="personal_password_comfirm">Confirm The Password</string>
    <string name="personal_password_new">New Password</string>
    <string name="please_enter_new_password">Please enter new password again</string>
    <string name="please_set_your_password">Please set your new password</string>
    <string name="read_and_agree">Read and agree to</string>
    <string name="read_and_agree_end">\t(Privacy Policy)</string>
    <string name="redemption_any_question">Any questions, please contact: %s</string>
    <string name="set_pwd">Set password</string>
    <string name="title_login">Login</string>
    <string name="title_other_accounts">Other accounts</string>
    <string name="title_recent_login">RECENT LOGINS</string>
    <string name="yes">Yes</string>
</resources>