<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_1f202a"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.mobile.brasiltv.view.TitleBarView
        android:id="@+id/mTbvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBgColor="@color/color_191a23"
        app:titleCloseIcon="@drawable/icon_close_white"
        app:titleText="@string/set_pwd"
        app:titleTextColor="@color/color_ffffff"/>
    <TextView
        android:textSize="24px"
        android:textColor="@color/color_ffaa00"
        android:id="@+id/tips"
        android:background="@drawable/bg_change_email_tips"
        android:paddingLeft="32px"
        android:paddingTop="10px"
        android:paddingRight="68px"
        android:paddingBottom="10px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_format_tips"/>
    <TextView
        android:textSize="28px"
        android:textColor="@color/ffffff"
        android:id="@+id/tvNewPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32px"
        android:layout_marginTop="40px"
        android:text="@string/personal_password_new"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>
    <com.mobile.brasiltv.view.input.AccountInputView
        android:id="@+id/mAivPwd"
        android:background="@drawable/selector_bg_login_edit"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginLeft="24px"
        android:layout_marginTop="20px"
        android:layout_marginRight="24px"
        app:inputClearIcon="@drawable/ic_edit_clear"
        app:inputHint="@string/please_set_your_password"
        app:inputTextColor="@color/color_ffffff"/>
    <TextView
        android:textSize="28px"
        android:textColor="@color/ffffff"
        android:id="@+id/tvReNewPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32px"
        android:layout_marginTop="40px"
        android:text="@string/personal_password_comfirm"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>
    <com.mobile.brasiltv.view.input.AccountInputView
        android:id="@+id/mAivRepeatPwd"
        android:background="@drawable/selector_bg_login_edit"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_marginLeft="24px"
        android:layout_marginTop="20px"
        android:layout_marginRight="24px"
        app:inputClearIcon="@drawable/ic_edit_clear"
        app:inputHint="@string/please_enter_new_password"
        app:inputTextColor="@color/color_ffffff"/>
    <TextView
        android:enabled="false"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/color_ffffff"
        android:gravity="center"
        android:id="@+id/mTvConfirm"
        android:background="@drawable/selector_btn_login"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginLeft="24px"
        android:layout_marginTop="100px"
        android:layout_marginRight="24px"
        android:text="@string/confirm"/>
    <TextView
        android:textSize="13sp"
        android:textColor="@color/color_f23232"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/mTvErrorHint"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"/>
</com.zhy.autolayout.AutoLinearLayout>
