<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mobile.brasiltv.view.TitleBarView
        android:id="@+id/mTbvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBgColor="@color/color_191a23"
        app:titleText="@string/title_login"
        app:titleTextColor="@color/color_ffffff"/>
    <com.mobile.brasiltv.view.login.AccountEditView
        android:id="@+id/mAevAccount"
        android:background="@drawable/selector_bg_login_edit"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_marginLeft="24px"
        android:layout_marginTop="60px"
        android:layout_marginRight="24px"
        app:accountClearIcon="@drawable/ic_edit_clear"
        app:accountInputHint="@string/enter_account_hint"
        app:accountTypeIcon="@drawable/ic_edit_account"/>
    <com.mobile.brasiltv.view.login.PasswordEditView
        android:id="@+id/mPevPassword"
        android:background="@drawable/selector_bg_login_edit"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_marginLeft="24px"
        android:layout_marginTop="20px"
        android:layout_marginRight="24px"
        app:closeEyeIcon="@drawable/ic_edit_close_eye"
        app:openEyeIcon="@drawable/ic_edit_open_eye"
        app:pwdClearIcon="@drawable/ic_edit_clear"
        app:pwdInputHint="@string/enter_password_hint"
        app:pwdTypeIcon="@drawable/ic_edit_lock"/>
    <TextView
        android:textSize="12sp"
        android:textColor="@color/color_important"
        android:layout_gravity="right"
        android:id="@+id/mTvForgetPwd"
        android:paddingTop="20px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="34px"
        android:text="@string/login_forget_password"/>
    <TextView
        android:enabled="false"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/color_ffffff"
        android:gravity="center"
        android:id="@+id/mTvLogin"
        android:background="@drawable/selector_btn_login"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginLeft="24px"
        android:layout_marginTop="115px"
        android:layout_marginRight="24px"
        android:text="@string/login"/>
    <com.zhy.autolayout.AutoLinearLayout
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="12sp"
            android:textColor="@color/color_999999"
            android:paddingBottom="59px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_device_account"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/color_ffbf00"
            android:id="@+id/mTvDeviceId"
            android:paddingBottom="59px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4px"/>
    </com.zhy.autolayout.AutoLinearLayout>
</merge>
