<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_1f202a"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.mobile.brasiltv.view.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleViewTitle="@string/binding_prompt"/>
    <ImageView
        android:id="@+id/img"
        android:layout_width="203px"
        android:layout_height="194px"
        android:layout_marginTop="213px"
        android:src="@mipmap/send_email"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="100px"
        android:layout_marginRight="30px"
        android:text="@string/email_send_success"
        android:layout_below="@+id/img"/>
    <TextView
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:id="@+id/sendMsgBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:text="@string/do_not_receive"
        android:layout_below="@+id/content"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textColor="@color/color_f23232"
        android:id="@+id/tryAgain"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="141px"
        android:text="@string/frequent_operation"
        android:layout_below="@+id/sendMsgBt"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textSize="24px"
        android:textColor="@color/color_important"
        android:id="@+id/resendEmail"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:text="@string/email_send_again"
        android:layout_below="@+id/tryAgain"
        android:layout_centerHorizontal="true"/>
    <ProgressBar
        android:id="@+id/mLoadingPbar"
        android:visibility="gone"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerInParent="true"
        style="?android:attr/progressBarStyleSmall"/>
</com.zhy.autolayout.AutoRelativeLayout>
