<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_dialog_restrict"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="28px"
        android:textColor="@color/color_important"
        android:gravity="center"
        android:id="@+id/mTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37px"
        android:text="@string/attention"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textSize="24px"
        android:textColor="@color/color_666666"
        android:gravity="center"
        android:id="@+id/mTextNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40px"
        android:layout_marginTop="43px"
        android:text="@string/are_you_adult"
        android:layout_below="@+id/mTextTitle"/>
    <TextView
        android:textSize="24px"
        android:textColor="@color/ffffff"
        android:gravity="center"
        android:id="@+id/mTextNo"
        android:background="@drawable/bg_restrict_confirm"
        android:layout_width="360px"
        android:layout_height="60px"
        android:layout_marginTop="70px"
        android:text="@string/no"
        android:layout_below="@+id/mTextNotify"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textSize="24px"
        android:textColor="@color/color_important"
        android:gravity="center"
        android:id="@+id/mTextYes"
        android:background="@drawable/bg_restrict_cancel"
        android:layout_width="360px"
        android:layout_height="60px"
        android:layout_marginTop="30px"
        android:text="@string/yes"
        android:layout_below="@+id/mTextNo"
        android:layout_centerHorizontal="true"/>
</com.zhy.autolayout.AutoRelativeLayout>
