<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/shape_dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="14sp"
        android:textColor="@color/color_important"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="76px"
        android:text="@string/attention"/>
    <View
        android:background="@color/color_dddddd"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:textSize="12sp"
        android:textColor="@color/color_666666"
        android:gravity="center"
        android:paddingLeft="50px"
        android:paddingTop="26px"
        android:paddingRight="50px"
        android:paddingBottom="49px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/black_list_hint"/>
    <com.mobile.brasiltv.view.KoocanButton
        android:textSize="12sp"
        android:textColor="@color/color_ffffff"
        android:id="@+id/kb_login_other"
        android:background="@drawable/bg_upgrade_confirm"
        android:layout_width="match_parent"
        android:layout_height="60px"
        android:layout_marginLeft="80px"
        android:layout_marginRight="80px"
        android:layout_marginBottom="36px"
        android:text="@string/black_list_login_other"/>
    <TextView
        android:textSize="12sp"
        android:textColor="@color/color_999999"
        android:layout_gravity="right"
        android:id="@+id/tv_id"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="53px"
        android:layout_marginBottom="22px"
        android:text="@string/black_list_id"/>
</com.zhy.autolayout.AutoLinearLayout>
